--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -102,6 +102,74 @@ td.mywidth{
 
 /*会员管理左侧栏*/
 
+
+/*目录管理左侧栏*/
+#catelog_admin_left{
+	background:url(../image/category_admin.jpg) no-repeat;
+	padding:55px 0px 15px 0px;
+	height:376px;
+	}
+#catelog_admin_left h4{
+	margin:0px 18px 0px 18px;
+	padding:3px 0px 1px 5px;
+	background: #4796E4;
+	font-size:14px;
+}
+#catelog_admin_left ul{
+	list-style:none;
+	margin:0px;
+	padding:5px 22px 15px 22px;
+}
+#catelog_admin_left ul li{
+	padding:2px 0px 2px 16px;
+	border-bottom:1px dashed #999999;
+	background:url(../image/icon1.gif) no-repeat 5px 7px;
+}
+
+#catelog_admin_left ul li a:link, #category ul li a:visited{
+	color:#000000;
+	text-decoration:none;
+}
+#catelog_admin_left ul li a:hover{
+	color:#666666;
+}
+
+/*目录管理左侧栏*/
+
+/*目录管理左侧栏2*/
+#catelog_admin_left2{
+	background:url(../image/category_admin.jpg) no-repeat;
+	padding:55px 0px 15px 0px;
+	height:114px;
+	}
+#catelog_admin_left2 h4{
+	margin:0px 18px 0px 18px;
+	padding:3px 0px 1px 5px;
+	background: #4796E4;
+	font-size:14px;
+}
+#catelog_admin_left2 ul{
+	list-style:none;
+	margin:0px;
+	padding:5px 22px 15px 22px;
+}
+#catelog_admin_left2 ul li{
+	padding:2px 0px 2px 16px;
+	border-bottom:1px dashed #999999;
+	background:url(../image/icon1.gif) no-repeat 5px 7px;
+}
+
+#catelog_admin_left2 ul li a:link, #category ul li a:visited{
+	color:#000000;
+	text-decoration:none;
+}
+#catelog_admin_left2 ul li a:hover{
+	color:#666666;
+}
+
+/*目录管理左侧栏2end*/
+
+
 #item_left
 {
 	background:#EAF2F7;
@@ -316,7 +384,7 @@ text-align: center;
 
 #search1 #mysearchleft,#search2 #mysearchleft{
 	float:left;
-	width:250px;
+/*	width:250px;*/
 	height:30px;
 	margin:0px 0px 0px 0px;
 	padding-top:5px;
@@ -324,6 +392,38 @@ text-align: center;
 	color:#2696ca;
 	font-size:14px;
 }
+<!--目录管理当前位置栏-->
+#gz_search
+{
+	width:618px;
+	height:30px;
+	background-color:#ffffff;
+	border-width:0px 0px 1px 0px;
+	border-style:solid;
+	border-color:#CCCCCC;
+}
+
+#mysearchleftlong{
+	float:left;
+	width:300px;
+	height:30px;
+	margin:0px 0px 0px 0px;
+	padding-top:5px;
+	padding-left:15px;
+	color:#2696ca;
+	font-size:14px;
+}
+<!--目录管理当前位置栏end-->
+
+<!--目录管理表格-->
+#catalog_itemsearch{
+	font-size:13px;
+	margin:0px auto;
+	text-align:left;
+	line-height:28px;
+	}
+<!--目录管理表格end-->
+
 
 <!--当有左侧栏时右侧栏的格式控制-->
  #mydouble{
