--- a/webapp/css/item.css
+++ b/webapp/css/item.css
@@ -106,6 +106,12 @@
 	border: 1px solid #CCC;
 	background: white;
 }
+.i-img img
+{
+	margin:-13px 0 0 -13px;
+	width:120px;
+	height:160px;
+}
 .item .dl
 {
 	width:460px;
