--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -455,3 +455,9 @@ text-align: center;
 
 <!--水平虚线-->
 .hr0{ height:1px;border:none;border-top:1px dashed #0066CC;} 
+
+#catalog_list{
+	font-size:14px;
+	text-align:left;
+	border:0px;
+	}
