--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
+.user_note .user_note_content {
+padding: 15px;
+float: left;
+}
+
 p.title{
 	background:#09F;
 	pading:50px;
@@ -453,6 +458,16 @@ text-align: center;
 }
 <!--table格式控制--end>
 
+
+<!--table格式控制-->
+.mytable_pass_modify{
+	width:600px;
+	font-size:20px;
+	text-align:center;
+	line-height:28px;
+}
+<!--table格式控制--end>
+
 <!--水平虚线-->
 .hr0{ height:1px;border:none;border-top:1px dashed #0066CC;} 
 
@@ -461,3 +476,9 @@ text-align: center;
 	text-align:left;
 	border:0px;
 	}
+	
+#pmain{
+	float:left;
+	width:800px;
+	margin:1px 0px 0px 0px;
+}
