--- a/webapp/css/frame.css
+++ b/webapp/css/frame.css
@@ -1060,3 +1060,14 @@ span.sa5
 	background-position:0px 2px;
 	width:70px;
 }
+.info-detail
+{
+	margin-left:30px;
+	font:18px "Microsoft YaHei";
+}
+.info-detail li
+{
+	margin:0;
+	line-height:30px;
+	height:30px;
+}
