优化逻辑， 分离订单详情修改和订单审核，调整相关按钮

--- a/webapp/admin/css/gz.css
+++ b/webapp/admin/css/gz.css
@@ -482,3 +482,9 @@ text-align: center;
 	width:800px;
 	margin:1px 0px 0px 0px;
 }
+
+<!--底栏table后div格式控制-->
+.divPosition{
+	position: relative;
+	left: 600px;
+}
